修改模型定义读取