@@ -3,30 +3,29 @@ package net.momirealms.craftengine.core.pack.model.definition;
 import com.google.gson.JsonArray;
 import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import net.momirealms.craftengine.core.pack.Identifier;
 import net.momirealms.craftengine.core.pack.model.definition.tint.Tint;
 import net.momirealms.craftengine.core.pack.model.definition.tint.Tints;
 import net.momirealms.craftengine.core.pack.model.generation.ModelGeneration;
 import net.momirealms.craftengine.core.pack.revision.Revision;
 import net.momirealms.craftengine.core.plugin.config.ConfigSection;
 import net.momirealms.craftengine.core.plugin.config.ConfigValue;
-import net.momirealms.craftengine.core.plugin.locale.LocalizedResourceConfigException;
 import net.momirealms.craftengine.core.util.Key;
 import net.momirealms.craftengine.core.util.MinecraftVersion;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public final class BaseItemModel implements ItemModel {
     public static final ItemModelFactory<BaseItemModel> FACTORY = new Factory();
     public static final ItemModelReader<BaseItemModel> READER = new Reader();
-    private final String path;
+    private final Key path;
     private final List<Tint> tints;
     private final ModelGeneration modelGeneration;
 
-    public BaseItemModel(@NotNull String path,
+    public BaseItemModel(@NotNull Key path,
                          @NotNull List<Tint> tints,
                          @Nullable ModelGeneration modelGeneration) {
         this.path = path;
@@ -44,7 +43,7 @@ public final class BaseItemModel implements ItemModel {
         return this.tints;
     }
 
-    public String path() {
+    public Key path() {
         return this.path;
     }
 
@@ -52,7 +51,7 @@ public final class BaseItemModel implements ItemModel {
     public JsonObject apply(MinecraftVersion version) {
         JsonObject json = new JsonObject();
         json.addProperty("type", "model");
-        json.addProperty("model", this.path);
+        json.addProperty("model", this.path.asMinimalString());
         if (!this.tints.isEmpty()) {
             JsonArray array = new JsonArray();
             for (Tint tint : this.tints) {
@@ -81,25 +80,17 @@ public final class BaseItemModel implements ItemModel {
 
         @Override
         public BaseItemModel create(ConfigSection section) {
-            String modelPath = section.getNonNullString("path");
-            if (!Identifier.isValid(modelPath)) {
-                throw new LocalizedResourceConfigException("warning.config.item.model.base.invalid_path", modelPath);
-            }
+            Key modelPath = section.getNonNullIdentifier("path", "model");
             ConfigSection generation = section.getSection("generation");
             ModelGeneration modelGeneration = null;
             if (generation != null) {
-                modelGeneration = ModelGeneration.of(Key.of(modelPath), generation);
+                modelGeneration = ModelGeneration.of(modelPath, generation);
             }
-            if (section.containsKey("tints")) {
-                List<Tint> tints = new ArrayList<>();
-                List<ConfigSection> tintList = section.parseList(ConfigValue::getAsSection,"tints");
-                for (ConfigSection tint : tintList) {
-                    tints.add(Tints.fromMap(tint));
-                }
-                return new BaseItemModel(modelPath, tints, modelGeneration);
-            } else {
-                return new BaseItemModel(modelPath, List.of(), modelGeneration);
-            }
+            return new BaseItemModel(
+                    modelPath,
+                    section.parseSectionList(Tints::fromConfig, "tints"),
+                    modelGeneration
+            );
         }
     }
 
@@ -108,9 +99,10 @@ public final class BaseItemModel implements ItemModel {
         @Override
         public BaseItemModel read(JsonObject json) {
             String model = json.get("model").getAsString();
+            List<Tint> tints;
             if (json.has("tints")) {
                 JsonArray array = json.getAsJsonArray("tints");
-                List<Tint> tints = new ArrayList<>(array.size());
+                tints = new ArrayList<>(array.size());
                 for (JsonElement element : array) {
                     if (element instanceof JsonObject jo) {
                         tints.add(Tints.fromJson(jo));
@@ -118,10 +110,10 @@ public final class BaseItemModel implements ItemModel {
                         throw new IllegalArgumentException("tint is expected to be a json object");
                     }
                 }
-                return new BaseItemModel(model, tints, null);
             } else {
-                return new BaseItemModel(model, List.of(), null);
+                tints = Collections.emptyList();
             }
+            return new BaseItemModel(Key.of(model), tints, null);
         }
     }
 }
